AssingmentSmartHR/force-app/main/default/objects/Job_Posting__c/fields/Expire_By__c.field-meta.xml
<CustomField>
    <fullName>Expire_By__c</fullName>
    <label>Expire By</label>
    <type>DateTime</type>
</CustomField>