AssingmentSmartHR/force-app/main/default/objects/Job_Posting__c/fields/Job_Posted__c.field-meta.xml
<CustomField>
    <fullName>Job_Posted__c</fullName>
    <label>Job Posted</label>
    <type>Date</type>
</CustomField>