AssingmentSmartHR/force-app/main/default/objects/Job_Posting__c/fields/Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Portfolio__c</fullName>
    <label>Portfolio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consulting</fullName>
                <default>true</default>
                <label>Consulting</label>
            </value>
            <value>
                <fullName>Tax</fullName>
            </value>
            <value>
                <fullName>Audit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>