AssingmentSmartHR/force-app/main/default/objects/Job_Posting__c/fields/Primary_Location__c.field-meta.xml
<CustomField>
    <fullName>Primary_Location__c</fullName>
    <label>Primary Location</label>
    <length>50</length>
    <type>Text</type>
</CustomField>