AssingmentSmartHR/force-app/main/default/objects/Job_Posting__c/fields/Secondary_Location_s__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Location_s__c</fullName>
    <label>Secondary Location(s)</label>
    <type>TextArea</type>
</CustomField>