AssingmentSmartHR/force-app/main/default/objects/Job_Posting__c/fields/SkillSet__c.field-meta.xml
<CustomField>
    <fullName>SkillSet__c</fullName>
    <label>SkillSet</label>
    <length>30000</length>
    <type>Html</type>
</CustomField>