AssingmentSmartHR/force-app/main/default/objects/Job_Posting__c/fields/Sub_Offering__c.field-meta.xml
<CustomField>
    <fullName>Sub_Offering__c</fullName>
    <label>Sub Offering</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CMS</fullName>
            </value>
            <value>
                <fullName>CBO</fullName>
            </value>
            <value>
                <fullName>ETP</fullName>
            </value>
            <value>
                <fullName>ECM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>